[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Characters/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Projectile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Graphics/Characters/Enemy_Square/Square_SpriteSheet.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Fonts/GWIBBLE_.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Audio/SFX/Enemy_Attack.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/SFX/Enemy_Hit.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/SFX/Enemy_Die.wav" type="AudioStream" id=8]




[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 229.888, 285.724 )

[sub_resource type="Animation" id=2]
resource_name = "Dead"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"

[sub_resource type="Animation" id=4]
resource_name = "Run_Horizontal"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 14, 9, 15 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 4, 6, 11, 6, 12, 6, 13, 6 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("FaceFrontSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FaceSideSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Dead"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("FaceFrontSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FaceSideSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FaceFrontSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.39457, -7.56959 ), Vector2( 1.39457, -7.56959 ), Vector2( 1.39457, -7.56959 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FaceFrontSprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -92.5124, -257.134 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FaceFrontSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("FaceFrontSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FaceSideSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("FaceFrontSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FaceFrontSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.39457, -7.56959 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FaceFrontSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FaceSideSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.33563, -0.17894 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FaceSideSprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("FaceSideSprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Hurt"

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 21.3941, 31.4557 )

[sub_resource type="DynamicFont" id=12]
size = 60
font_data = ExtResource( 5 )

[node name="Enemy" groups=[
"Enemy",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
projectile = ExtResource( 3 )

[node name="FaceBackSprite" parent="." index="0"]
frame = 10

[node name="BodySprite" parent="." index="1"]
texture = ExtResource( 4 )
hframes = 5

[node name="FaceFrontSprite" parent="." index="2"]
position = Vector2( 1.39457, -7.56959 )
rotation = -3.25647
texture = ExtResource( 4 )
offset = Vector2( -2.8378, 10.2345 )
hframes = 5
frame = 2

[node name="FaceSideSprite" parent="." index="3"]
position = Vector2( -3.33563, -0.17894 )
texture = ExtResource( 4 )
hframes = 5
frame = 8

[node name="DetectionRange" type="Area2D" parent="." index="8"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange" index="0"]
visible = false
shape = SubResource( 1 )

[node name="BodyAnim" type="AnimationPlayer" parent="." index="9"]
anims/Dead = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Run_Horizontal = SubResource( 4 )
anims/Run_Vertical = SubResource( 5 )

[node name="FaceAnim" type="AnimationPlayer" parent="." index="10"]
anims/Attack = SubResource( 6 )
anims/Dead = SubResource( 7 )
anims/Hurt = SubResource( 8 )
anims/Idle = SubResource( 9 )

[node name="HurtAnim" type="AnimationPlayer" parent="." index="11"]
anims/Hurt = SubResource( 10 )

[node name="BeforeAttackTimer" type="Timer" parent="." index="12"]
autostart = true

[node name="Projectiles" type="Node" parent="." index="13"]

[node name="HitBox" parent="." index="14" groups=[
"Enemy",
]]

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 3.22636, -4.30183 )
shape = SubResource( 11 )

[node name="Control" type="Control" parent="." index="17"]
margin_right = 40.0
margin_bottom = 40.0

[node name="HealthLabel" type="Label" parent="." index="18"]
margin_left = -14.5591
margin_top = -74.0893
margin_right = 25.4409
margin_bottom = -10.0893
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"

[node name="Sounds" type="Node2D" parent="." index="19"]

[node name="Attack" type="AudioStreamPlayer" parent="Sounds" index="0"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Hurt" type="AudioStreamPlayer" parent="Sounds" index="1"]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="Death" type="AudioStreamPlayer" parent="Sounds" index="2"]
stream = ExtResource( 8 )
volume_db = -20.0

[connection signal="timeout" from="ImmortalDuration" to="." method="_on_ImmortalDuration_timeout"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="animation_finished" from="FaceAnim" to="." method="_on_FaceAnim_animation_finished"]
[connection signal="timeout" from="BeforeAttackTimer" to="." method="attack"]
